tooling/nargo_cli/tests/snapshots/execute__tests__signed_inactive_division_by_zero_force_brillig_true_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "5968081489048915939",
  "abi": {
    "parameters": [
      {
        "name": "a",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "b",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "condition",
        "type": {
          "kind": "boolean"
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "integer",
        "sign": "signed",
        "width": 32
      },
      "visibility": "public"
    },
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/9VWTU+DQBDdD2i7Ui9tYuLJGE/GmEBoAwdNepD6O4gNv4OfLqQz4TFuOehidJLNLrtvZ96+mQW0OpvtmqZxBHPSGHOgPv2ZZQF9pXPy1P+EpwnIUwNP+2VA5I3nMNYz90q9o97Aug0ogBNxQ/ov013p1NgC888d+Yxm9h/P4z9dkp+3dvCPZ4lFjTBO7rGAqQBTXcAcAXMETG/XNMaC5li8hnVciTWsZ/a96tpGDeMtxOrtHThwXCdiBa7Nwgm+oe/W9gL/3hLSoaDnWKzfUr/o2o3QY4672hvnD+tPA4+94HEVmEfRnI3jxqCN9cSUdZLMpAvHWgv/MqZW41wy/zvQ8J7GrPUC9q8B9zCB0x7cb+VkqaZzYv5YTgzwRf6PoOGT0Hql/Dl5nsAZD06r8Z22wBHzuRJ4BxryPH5/luJMjMuAQw4+5qgLmQf5DvXFRO0izxq+Y+Q3CPckcOaoDX+uohx+5mw7aO37wY9gHfEv9Iwa4DkO3+TZFHXW5HVT7+vTafdRb4T/3gzo9AlbyT3JsQwAAA==",
  "debug_symbols": "ldRBCoMwEIXhu8zahZpJbb1KKRI1SiAkEmOhiHdvUgqV7t5GHPFPFh/MTqPut7kzbvIrtfedrB9UNN6laT8K6oOx1szd+TOV+VHLz//rolwe16hCpLZq6oK0G/Nbk/rJWE2tLI9HQfUFLhq4uMLFDS1ECRcVXNRwIeCC4QI2F7C5gM0FbC5gc4bNGTZn2Jxhc4bNGTZn2Jxhc4bNGTaXoPmRpqcKRvVWf9fntLnhtE3ja9F/i3UJftDjFnResb/tWuW7pSwuZTo2Hf0G",
  "file_map": {
    "50": {
      "source": "fn main(a: i32, b: i32, condition: bool) -> pub i32 {\n    if condition {\n        // If `condition` is not set then we should not trigger an assertion failure here.\n        a / b\n    } else {\n        0\n    }\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/signed_inactive_division_by_zero/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
